Changelog
=========

1.0b5 - unreleased
------------------

- Dtml vars removed.
  Fixes: http://dev.plone.org/plone/ticket/10492
  [pelle]

- Improved :focus which is an accessibility requirement, a level 2 priority 
  point/AA. This was removed entirely due to the reset css in use, so 
  specifying :hover then remember :focus as well.
  Fixes: http://dev.plone.org/plone/ticket/10472
  [pelle]

- Fix for global navigation colliding with portlets, bread crumb etc. 
  http://dev.plone.org/plone/ticket/10491
  [pelle]


1.0b4 - 2010-05-01
------------------

- Always enable breadcrumbs on all levels. ploneCustom contains an example on
  how to disable them on the first levels. This closes
  http://dev.plone.org/plone/ticket/9987 again.
  [elvix, hannosch]

- Added tests for "ajax_load" query string in main_template. When found, skip
  anything expensive that isn't going to show in an ajax overlay.
  The plone.app.jquerytools overlay helper sets the ajax_load query string
  to prevent browser caching.
  [smcmahon]

- Removed fixed vertical position for overlays. This needs to be computed on
  display so that overlays don't display out of the viewport on long pages.
  [smcmahon]

- Remove display:none for navigation portlet header. This is now handled
  through the template.
  [esteele]

- Improved style of blocked portlets.
  [igbun]

- Be carefull with adding ie hacks to IEFixes.css since Sunburst Theme 
  uses IE8.js.
  Fixes http://dev.plone.org/plone/ticket/10417.
  [pelle]

- Improved overlay styling e.g. for openid overlay.
  Done when stepping trough #10035 and it's tried to make as general as possible.
  [pelle]


1.0b3 - 2010-04-10
------------------

- Improved mobile styling.
  [limi]

- Less disruptive styling for inline validation, it no longer shifts the form
  around in a significant way.
  [limi]

- Remove unused personalize_form template and unneeded copies of the author
  template and prefs_main_template.
  [davisagli]
